# mcp_tool

./: .gitignore  KNN.py  README.md  SVC.py  XGBoost.py  main.py  pyproject.toml  requirements.txt
tool_functions/: AWPD.py  Bispectrum.py  HMM.py  KNN.py  LDA.py  PCA.py  ReliefF .py  SVC.py  SVDD.py  SVR（BayesOpt）.py  TVD.py  VMD-CVM.py  XGBoost.py  __init__.py  arithmetic.py  feature_redundancy_filter.py  notebook_code_executor.py  precision_spectrum.py  quantile_regression_interval.py  rf.py  ridge_regularization.py  spectrum_analysis.py  supabase_query.py  web_search.py
